# wagtail-mautic

./: README.md  manage.py  pyproject.toml  requirements.txt
django_setup/: asgi.py  settings.py  urls.py  wsgi.py
example/: urls.py  wsgi.py
example/settings/: base.py  dev.py
example/templates/: base.html
wagtail_mautic/: __init__.py  apps.py  models.py
wagtail_mautic/migrations/: 0001_initial.py  0002_auto_20200914_1952.py
wagtail_mautic/templates/wagtail_mautic/: mautic_prefetch.html  mautic_tracking.html
wagtail_mautic/templatetags/: mautic_tags.py
